--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
            <h2>D3 Graphics</h2>
            <section id="chart"></section> 
         </div>
+        
+        <div class="container">
+           <h2>Chart</h2>
+           <section id="bChart"></section> 
+        </div>
+        
         <script src="assets/js/d3.min.js"></script>
         <script src="assets/js/script.js"></script>
     </body>
