--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </div>
         
         <div class="container">
-           <h2>Chart</h2>
+           <h2>BarChart</h2>
            <section id="bChart"></section> 
         </div>
         
