--- a/index.html
+++ b/index.html
@@ -1,23 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>D3 Graphics</title>
-        <link rel="stylesheet" href="assets/css/base.css">
-        <link rel="stylesheet" href="assets/css/styles.css">
-    </head>
-    <body>
-        <div class="container">
-           <h2>D3 Graphics</h2>
-           <section id="chart"></section> 
-        </div>
-        
-        <div class="container">
-           <h2>BarChart</h2>
-           <section id="bChart"></section> 
-        </div>
-        
-        <script src="assets/js/d3.min.js"></script>
-        <script src="assets/js/script.js"></script>
-    </body>
+<html>
+<head>
+	<meta charset="UTF-8">
+    <link rel="stylesheet" href="assets/css/base.css">
+	<title>D3 Graphics</title>
+</head>
+<body>
+
+	<div id="area">
+		<a href="Barchart.html">See Barchart</a>
+		<br>
+		<br>
+		<a href="rectAndCircle.html">See Rectangle And Circle</a>
+	</div>
+
+</body>
 </html>
