adds force layout

--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@
 <body>
 
 	<div id="area">
-		<a href="Barchart.html">See Barchart</a>
+		<a href="Barchart.html">Barchart</a>
 		<br>
 		<br>
-		<a href="rectAndCircle.html">See Rectangle And Circle</a>
+		<a href="rectAndCircle.html">Rectangle And Circle</a>
+		<br>
+		<br>
+		<a href="Piechart.html">Piechart</a>
+		<br>
+		<br>
+		<a href="forceLayout.html">Force Layout</a>
 	</div>
 
 </body>
